--- a/ui/inspectors/calendar-task.reel/cron-args.reel/cron-args.html
+++ b/ui/inspectors/calendar-task.reel/cron-args.reel/cron-args.html
@@ -17,7 +17,7 @@
                 "label": "Command"
             },
             "bindings": {
-                "value": {"<->": "@owner.args.1"}
+                "value": {"<->": "@owner.object.1"}
             }
         },
         "user": {
@@ -27,7 +27,7 @@
                 "label": "User"
             },
             "bindings": {
-                "value": {"<->": "@owner.args.0"}
+                "value": {"<->": "@owner.object.0"}
             }
         }
     }
