--- a/ui/inspectors/calendar-task.reel/scrub-args.reel/scrub-args.html
+++ b/ui/inspectors/calendar-task.reel/scrub-args.reel/scrub-args.html
@@ -26,7 +26,7 @@
             },
             "bindings": {
                 "options": {"<-": "[{id: '---'}].concat(@owner.volumes)"},
-                "selectedValue": {"<->": "@owner.args.0"}
+                "selectedValue": {"<->": "@owner.object.0"}
             }
         }
     }
