Fix a bunch of stuff in the calendar tasks.
Please do not ask me why I am doing any of this, ask @pchaussalet

--- a/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
+++ b/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
@@ -210,7 +210,7 @@
                 "label": "Preserve attributes"
             },
             "bindings": {
-                "checked": {"<->": "@owner.object.0.rsync_properties.preserve_attributes"}
+                "checked": {"<->": "@owner.object.0.rsync_properties.delay_updates"}
             }
         },
         "extra": {
@@ -220,7 +220,7 @@
                 "label": "Extra arguments"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.0.rsync_properties.extra"}
+                "value": {"<->": "@owner._extra"}
             }
         }
     }
