show failing smart status for disk icons on available disks pane

--- a/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
+++ b/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
@@ -32,7 +32,8 @@
                 "element": {"#": "grid"},
                 "controller": {"@": "controller"},
                 "labelPath": "name",
-                "itemDraggable": true
+                "itemDraggable": true,
+                "delegate": {"@": "owner"}
             },
             "bindings": {
                 "icon": {"<-": "@owner.icon"},
