--- a/ui/widgets/system-info.reel/system-info.html
+++ b/ui/widgets/system-info.reel/system-info.html
@@ -77,7 +77,7 @@
                 "converter": {"@": "iso8601ToStringConverter"}
             },
             "bindings": {
-                "value": {"<-": "@owner.systemInfo.time.system_time['$date']"}
+                "value": {"<-": "@owner.systemInfo.time.system_time"}
             }
         },
         "cpuCount": {
