Allow to disable add button within the table editable header

--- a/ui/controls/table-editable-header.reel/table-editable-header.html
+++ b/ui/controls/table-editable-header.reel/table-editable-header.html
@@ -16,7 +16,7 @@
                 "element": {"#": "addButton"}
             },
             "bindings": {
-                "disabled": {"<-": "@owner.table.isAddingNewEntry"}
+                "disabled": {"<-": "!!@owner.addButtonDisabled || @owner.table.isAddingNewEntry"}
             }
         },
 
