Cosmetic fixes for the ntp sync now dropdown/button
Ticket: #19271

--- a/ui/inspectors/directory-services.reel/directory-services.html
+++ b/ui/inspectors/directory-services.reel/directory-services.html
@@ -105,9 +105,11 @@
         <div data-montage-id="scrollView" class="DirectoryServices-body">
             <div data-montage-id="directoryServices"></div>
         </div>
-        <div data-montage-id="ntpServers"></div>
-        <div data-montage-id="ntpSyncNow"></div>
         <div class="DirectoryServices-searchorderContainer">
+            <div data-montage-id="ntpServers"></div>
+            <div class="DirectoryServices-ntpSyncNow-button">
+                <div data-montage-id="ntpSyncNow"></div>
+            </div>
             <div data-montage-id="searchOrder" class="DirectoryServices-searchorder"></div>
             <div class="DirectoryServices-buttons">
                 <div data-montage-id="revert"></div>
