removes css to use helper classes

--- a/ui/inspectors/directory-services.reel/directory-services.html
+++ b/ui/inspectors/directory-services.reel/directory-services.html
@@ -79,7 +79,7 @@
             "bindings": {
                 "disabled": {"<-": "!@owner.ntpServer"}
             }
-        }, 
+        },
 
         "revert": {
             "prototype": "blue-shark/ui/button.reel",
@@ -107,7 +107,7 @@
         </div>
         <div class="DirectoryServices-searchorderContainer">
             <div data-montage-id="ntpServers"></div>
-            <div class="DirectoryServices-ntpSyncNow-button">
+            <div class="flex-row flex-justifyContent--end g-margin-bottom g-margin-top--subtract-half">
                 <div data-montage-id="ntpSyncNow"></div>
             </div>
             <div data-montage-id="searchOrder" class="DirectoryServices-searchorder"></div>
