adds margin-bottom to wizard directory service tables

--- a/ui/sections/wizard/inspectors/directory-services.reel/directory-services.html
+++ b/ui/sections/wizard/inspectors/directory-services.reel/directory-services.html
@@ -61,10 +61,10 @@
 </head>
 <body>
     <div data-montage-id="owner" class="DirectoryServices-wizard">
-        <div data-montage-id="windbind"></div>
-        <div data-montage-id="freeipa"></div>
-        <div data-montage-id="ldap"></div>
-        <div data-montage-id="nis"></div>
+        <div data-montage-id="windbind" class="g-margin-bottom"></div>
+        <div data-montage-id="freeipa" class="g-margin-bottom"></div>
+        <div data-montage-id="ldap" class="g-margin-bottom"></div>
+        <div data-montage-id="nis" class="g-margin-bottom"></div>
     </div>
 </body>
 </html>
