edits alignment of wizard table styles, addes empty message, adds missing class for css hook

--- a/ui/sections/wizard/inspectors/directory-services.reel/table-active-directory.reel/table-active-directory.html
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-active-directory.reel/table-active-directory.html
@@ -16,6 +16,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "Active Directory",
+                "emptyMessage": "Add an Active Directory",
                 "columns":  [
                     {
                         "value": "name"
