--- a/ui/sections/wizard/inspectors/directory-services.reel/table-freeipa.reel/table-freeipa.html
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-freeipa.reel/table-freeipa.html
@@ -16,6 +16,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "FreeIpa",
+                "emptyMessage": "Add a FreeIpa",
                 "columns":  [
                     {
                         "value": "name"
