--- a/ui/sections/wizard/inspectors/directory-services.reel/table-ldap.reel/table-ldap.html
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-ldap.reel/table-ldap.html
@@ -17,6 +17,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "LDAP",
+                "emptyMessage": "Add an LDAP",
                 "columns":  [
                     {
                         "value": "name"
