--- a/ui/sections/wizard/inspectors/directory-services.reel/table-nis.reel/table-nis.html
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-nis.reel/table-nis.html
@@ -17,6 +17,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "NIS",
+                "emptyMessage": "Add a NIS",
                 "columns":  [
                     {
                         "value": "name"
