--- a/ui/sections/wizard/inspectors/directory-services.reel/table-freeipa.reel/table-row.reel/table-row.html
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-freeipa.reel/table-row.reel/table-row.html
@@ -57,7 +57,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableRow">
+    <div data-montage-id="owner" class="TableRow Table-cells">
         <div><div data-montage-id="name"></div></div>
         <div><div data-montage-id="domainName"></div></div>
         <div><div data-montage-id="domainAccountName"></div></div>
