--- a/ui/sections/wizard/inspectors/directory-services.reel/table-nis.reel/table-row.reel/table-row.html
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-nis.reel/table-row.reel/table-row.html
@@ -47,7 +47,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableRow">
+    <div data-montage-id="owner" class="TableRow Table-cells">
         <div><div data-montage-id="name"></div></div>
         <div><div data-montage-id="domain"></div></div>
         <div><div data-montage-id="server"></div></div>
