style tweaks to global wizard navigation elements

--- a/ui/sections/wizard/inspectors/wizard.reel/wizard.html
+++ b/ui/sections/wizard/inspectors/wizard.reel/wizard.html
@@ -105,7 +105,7 @@
 <body>
     <div data-montage-id="owner" class="Wizard">
         <div class="Wizard-header g-margin-bottom">
-            <h2 data-montage-id="stepsLabel" class="flush-bottom"></h2>
+            <h2 data-montage-id="stepsLabel" class="flush-v Wizard-header-title"></h2>
             <div class="Wizard-counter bold">
                 <span data-montage-id="currentPageNumber"></span>
                 of
@@ -114,11 +114,17 @@
         </div>
 
         <div data-montage-id="stepPlaceholder" class="stepPlaceholder g-margin-bottom"></div>
-        <div class="Wizard-controls">
-            <div data-montage-id="previous" class="Button--secondary"></div>
-            <div data-montage-id="next" class="Button--secondary"></div>
-            <div data-montage-id="skip" class="Button--secondary"></div>
-            <div data-montage-id="submit" class="Button--primary"></div>
+        <div class="Wizard-controls flex-row flex-justifyContent--spaceBetween">
+            <div data-montage-id="previous" class="Button--secondary Wizard-controls-previous">
+                <svg><use xlink:href="#i-arrow"/></svg>
+            </div>
+            <div class="flex-row flex-justifyContent--end">
+                <div data-montage-id="skip" class="Button--secondary"></div>
+                <div data-montage-id="next" class="Button--secondary Wizard-controls-next">
+                    <svg><use xlink:href="#i-arrow"/></svg>
+                </div>
+                <div data-montage-id="submit" class="Button--primary"></div>
+            </div>
         </div>
     </div>
 </body>
