adds help message to UID on accounts user

--- a/ui/inspectors/user.reel/user.html
+++ b/ui/inspectors/user.reel/user.html
@@ -82,7 +82,8 @@
                 "label": "User ID",
                 "validationPath": "uid",
                 "validator": {"@": "uidValidator"},
-                "errorMessage": "User ID must be between 0 and 4294967295"
+                "errorMessage": "User ID must be between 0 and 4294967295",
+                "helpMessage": "User ID must be between 0 and 4294967295"
             },
             "bindings": {
                 "value": {"<->": "+@owner.object.uid"}
